--- a/FalknerCountyJuvenileCourt/Pages/Report.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Report.cshtml
@@ -10,11 +10,11 @@
 <script>
     // Predefined set of colors, use this for every piechart so that color scheme is similar
     var predefinedColors = [
-        'rgba(255, 99, 132, 0.8)',
-        'rgba(54, 162, 235, 0.8)',
-        'rgba(255, 206, 86, 0.8)',
-        'rgba(75, 192, 192, 0.8)',
-        'rgba(153, 102, 255, 0.8)'
+        'rgba(255, 165, 0, 0.8)',   // Orange
+        'rgba(0, 0, 255, 0.8)',     // Blue
+        'rgba(255, 255, 0, 0.8)',   // Yellow
+        'rgba(169, 169, 169, 0.8)', // Grey
+        'rgba(0, 128, 0, 0.8)'      // Green
         ];
     document.addEventListener('DOMContentLoaded', async function () {
         try {
