--- a/FalknerCountyJuvenileCourt/Pages/Report.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Report.cshtml
@@ -10,6 +10,10 @@
         <h1>Person arrested by Gender</h1>
         <canvas id="genderPieChart" width="400" height="400"></canvas>
     </div>
+    <div style="width: 400px; height: 400px;">
+        <h1>Person arrested by Age</h1>
+        <canvas id="agePieChart" width="400" height="400"></canvas>
+    </div>
  
  
 <script>
@@ -96,6 +100,54 @@
                         labels: genderLabels,
                         datasets: [{
                             data: genderValues,
+                            backgroundColor: backgroundColors
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        legend: {
+                            position: 'top',
+                        }
+                    }
+                });
+            } else {
+                console.error("Error fetching data. Status:", response.status);
+                console.log("Raw response data:", await response.text());
+            }
+        } catch (error) {
+            console.error("Error fetching or parsing data:", error);
+ 
+        }
+    });
+
+    document.addEventListener('DOMContentLoaded', async function () {
+        try {
+            var response = await fetch('/Report?handler=AgeDistributionData', {
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+            //console.log("Raw response data:", await response.text());
+            if (response.ok) {
+                var ageData = await response.json();
+ 
+                console.log('Received ageData:', ageData);
+ 
+                var ageLabels = ageData.map(item => item.age);
+                var ageValues = ageData.map(item => item.count);
+ 
+                // Use predefined colors for the first 5 colors
+                var backgroundColors = predefinedColors.slice(0, Math.min(ageLabels.length, predefinedColors.length));
+                backgroundColors = backgroundColors.concat(generateRandomColors(Math.max(0, agegLabels.length - predefinedColors.length)));
+ 
+                var ctx = document.getElementById('agePieChart').getContext('2d');
+                var agePieChart = new Chart(ctx, {
+                    type: 'pie',
+                    data: {
+                        labels: ageLabels,
+                        datasets: [{
+                            data: ageValues,
                             backgroundColor: backgroundColors
                         }]
                     },
