--- a/FalknerCountyJuvenileCourt/Pages/Report.cshtml
+++ b/FalknerCountyJuvenileCourt/Pages/Report.cshtml
@@ -18,6 +18,10 @@
         <h1>Intake Decisions</h1>
         <canvas id="IntakeDecisionPieChart" width="400" height="400"></canvas>
     </div>
+    <div style="width: 400px; height: 400px;">
+        <h1>SAVRY Levels for Detained Youth Upon Intake</h1>
+        <canvas id="RiskPieChart" width="400" height="400"></canvas>
+    </div>
  
  
 <script>
@@ -198,6 +202,54 @@
                         labels: IntakeDecisionLabels,
                         datasets: [{
                             data: IntakeDecisionValues,
+                            backgroundColor: backgroundColors
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        legend: {
+                            position: 'top',
+                        }
+                    }
+                });
+            } else {
+                console.error("Error fetching data. Status:", response.status);
+                console.log("Raw response data:", await response.text());
+            }
+        } catch (error) {
+            console.error("Error fetching or parsing data:", error);
+ 
+        }
+    });
+
+    document.addEventListener('DOMContentLoaded', async function () {
+        try {
+            var response = await fetch('/Report?handler=RiskDistributionData', {
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+            //console.log("Raw response data:", await response.text());
+            if (response.ok) {
+                var RiskData = await response.json();
+ 
+                console.log('Received RiskData:', RiskData);
+ 
+                var RiskLabels = RiskData.map(item => item.riskCounts);
+                var RiskValues = RiskData.map(item => item.count);
+ 
+                // Use predefined colors for the first 5 colors
+                var backgroundColors = predefinedColors.slice(0, Math.min(RiskLabels.length, predefinedColors.length));
+                backgroundColors = backgroundColors.concat(generateRandomColors(Math.max(0, RiskLabels.length - predefinedColors.length)));
+ 
+                var ctx = document.getElementById('RiskPieChart').getContext('2d');
+                var RiskPieChart = new Chart(ctx, {
+                    type: 'pie',
+                    data: {
+                        labels: RiskLabels,
+                        datasets: [{
+                            data: RiskValues,
                             backgroundColor: backgroundColors
                         }]
                     },
